--- a/README
+++ b/README
@@ -1,7 +1,9 @@
 ASP -- A SEJITS Implementation for Python
 -------
 
+See https://github.com/shoaibkamil/asp/wiki for more information on Asp.
 
-See https://github.com/shoaibkamil/asp/wiki
 
-
+Multi-level Debugging
+-------
+Instructions on how to use the multi-level debugging tools coming soon.
